# idaes-ui

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  cypress.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  test_diagram.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/install/: action.yml
.github/workflows/: core.yml
IDAES-UI/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
IDAES-UI/public/assets/testing_data/: example_2.json
IDAES-UI/public/data/: demo_flowsheet.json  diagnostic_andrew.json  diagnostic_example.json
IDAES-UI/src/: App.tsx  AppContentWrapper.module.css  AppContentWrapper.tsx  AppContext.tsx  DiagnosticsToggle.tsx  Header.module.css  Header.tsx  HeaderButtons.module.css  HeaderButtons.tsx  index.css  main.tsx
IDAES-UI/src/components/MessageBar/: MessageBar.module.css  MessageBar.tsx  MessageBarTemplateGenerator.tsx
IDAES-UI/src/components/flowsheet_component/: flowsheet.tsx
IDAES-UI/src/components/flowsheet_main_component/: flowsheet_wrapper.module.css  flowsheet_wrapper.tsx
IDAES-UI/src/components/flowsheet_main_component/flex_layout_test/: flex_layout_test.tsx
IDAES-UI/src/components/header/: DiagnosticsToggle.tsx  HeaderLogo.module.css  HeaderLogo.tsx
IDAES-UI/src/components/header_component/: header.css  header.module.css  header.tsx
IDAES-UI/src/components/message_bar_component/: message_bar_component.tsx  message_bar_template_generator_utility_fn.tsx
IDAES-UI/src/components/mosaic/: mosaic.css  mosic.tsx
IDAES-UI/src/components/table_row_component/: table_row.tsx
IDAES-UI/src/context/: appContextHandler_loaclStorage.tsx  appMainContext.tsx  contextFN_parse_url.tsx
IDAES-UI/src/data/: demo_flowsheet.json
IDAES-UI/src/diagnosticLogs/: DiagnosticsLog.module.css  DiagnosticsLog.tsx  DiagnosticsLogHeader.tsx
IDAES-UI/src/diagnostics/: Diagnostics.tsx  DiagnosticsDisplay.module.css  DiagnosticsDisplay.tsx  DiagnosticsHeader.module.css  DiagnosticsHeader.tsx
IDAES-UI/src/diagram/: Diagram.module.css  Diagram.tsx  FV.tsx  toolbar.tsx  universal_functions.tsx
IDAES-UI/src/diagramVariable/: DiagramVariable.tsx
IDAES-UI/src/draggablePanel/: DraggablePanel.tsx  PanelHeaderStreamTable.tsx
IDAES-UI/src/header/: DiagnosticsToggle.module.css  DiagnosticsToggle.tsx  Header.module.css  Header.tsx  HeaderButtons.tsx  HeaderDiagramName.module.css  HeaderDiagramName.tsx  HeaderLogo.module.css  HeaderLogo.tsx
IDAES-UI/src/interface/: appMainContext_interface.tsx
IDAES-UI/src/streamTable/: StreamTable.css  StreamTable.tsx  StreamTableHeader.module.css  StreamTableHeader.tsx
IDAES-UI/src/utility/: contextFN_parse_url.tsx  resizePanel.tsx
cypress/e2e/: app.cy.js  flowsheet.cy.js  flowsheet_component.cy.js  fv.cy.js
doc/: index.md
docs/: README.md  README.txt  collab.md  conf.py  contacts.md  design.md  fv.md  home.md  index.md  index.rst  install.md  pytest.ini  requirements.txt  sample visualization.json
docs/api/: idaes_ui.fv.icons.rst  idaes_ui.fv.rst  idaes_ui.fv.tests.rst  idaes_ui.rst  modules.rst
docs/developer/: fv.md  index.md  install.md
docs/tests/: test_screenshots.py
docs/user/: index.md  install.md
docs/user/fv/: concepts.md  howto.md  index.md  reference.md
docs/user/save-diagram/: index.md
idaes_ui/: __init__.py
idaes_ui/fsvis/: __init__.py  flowsheet.py  fsvis.py  model_server.py
idaes_ui/fsvis/tests/: sample_visualization.py  test_fsvis.py  test_model_server.py  test_persist.py
idaes_ui/fv/: README.md  app.py  diagnostic_example.py  example.py  flowsheet.py  fsvis.py  model_server.py  save_diagram_screenshot.py
idaes_ui/fv/api/: __init__.py  api.py  diag_models.py
idaes_ui/fv/api/tests/: test_diag_models.py
idaes_ui/fv/fastAPI_functions/: cors.py  flowsheet_manager.py  initial_params.py  save_flowsheet.py  server_manager.py  uvicorn.py
idaes_ui/fv/fastAPI_route/: api_get_app_setting_route.py  api_get_diagnostics_route.py  api_get_flowsheet_route.py  api_get_react_app_route.py  api_post_diagnostics_runner.py  api_post_health_check_route.py  api_post_save_flowsheet.py  api_put_app_setting_route.py  api_put_flowsheet_route.py  router.py
idaes_ui/fv/icons/: positioning.py
idaes_ui/fv/models/: __init__.py  base.py  cli.py  diag.py  diagnostics_toolbox_report.py  flowsheet.py  issues.py  settings.py  stats.py
idaes_ui/fv/models/tests/: __init__.py  test_base.py  test_diag.py  test_issues.py  test_stats.py
idaes_ui/fv/reactBuild/: index.html
idaes_ui/fv/reactBuild/assets/: index-011363a0.js  index-030ef2c7.js  index-1acbef41.js  index-39be0182.js  index-670b7c0a.js  index-73e2415c.js  index-bb539b0c.js  index-c55a72ad.js
idaes_ui/fv/static/: index.html
idaes_ui/fv/static/assets/: allPaths-01c9bf3a.js  allPaths-0681ee5e.js  allPaths-0bc9c7ab.js  allPaths-1ec962a5.js  allPaths-214b7e00.js  allPaths-22e1146c.js  allPaths-2c6dee0e.js  allPaths-31cd9eea.js  allPaths-43eadd12.js  allPaths-49eb1853.js  allPaths-4a93b574.js  allPaths-54284cc9.js  allPaths-55ece038.js  allPaths-59afe831.js  allPaths-63388724.js  allPaths-6db4a51b.js  allPaths-72f5bd5b.js  allPaths-73e45bb5.js  allPaths-74f74b36.js  allPaths-755d17ce.js  allPaths-7566af35.js  allPaths-78ac50c9.js  allPaths-7c6e9f54.js  allPaths-9cb6c7b3.js  allPaths-9df2178d.js  allPaths-a1d1107f.js  allPaths-b12d27a2.js  allPaths-baa9a238.js  allPaths-c241d460.js  allPaths-c26c5bff.js  allPaths-cd8f23d3.js  allPaths-d14dfff0.js  allPaths-d1fbd6ce.js  allPaths-d5fc6c61.js  allPaths-d7fa434b.js  allPaths-da2bd5fd.js  allPaths-dff43f4a.js  allPaths-e2bec868.js  allPaths-f519b898.js  allPaths-fffaa014.js  (+157 more)
idaes_ui/fv/static/assets/testing_data/: example_3.json  (+3 more)
idaes_ui/fv/templates/: index.html
idaes_ui/fv/tests/: __init__.py  demo_flowsheet.json  flowsheets.py  sample_visualization.py  test_app.py  test_flowsheet.py  test_fsvis.py  test_icons.py  test_model_server.py  test_persist.py
idaes_ui/tests/: test_flowsheet.py  test_icons.py
idaes_ui/util/: diagnostics.py
idaes_ui/util/tests/: test_diagnostics.py
(+54 files in other folders)
